wrms (2.3.3-2) unstable; urgency=low

  * Display a link to the saved searches page if there are none in-menu.

 -- Andrew McMillan <debian@mcmillan.net.nz>  Tue,  1 Aug 2006 06:44:58 +1200

wrms (2.3.3-1) unstable; urgency=low

  * Fix SQL injection possibility in search.

 -- Andrew McMillan <debian@mcmillan.net.nz>  Fri, 23 Jun 2006 16:26:58 +1200

wrms (2.3.3-0) unstable; urgency=low

  * Fixes to Request::Write and Request::Validate.

 -- Andrew McMillan <debian@mcmillan.net.nz>  Sun, 18 Jun 2006 02:56:57 +1200

wrms (2.3.2-1) unstable; urgency=low

  * Nail the 'Remember me' bugs.

 -- Andrew McMillan <debian@mcmillan.net.nz>  Sat, 17 Jun 2006 11:36:32 +1200

wrms (2.3.2-0) unstable; urgency=low

  * Changes to Themes to better handle style=plain.
  * Fix a CSS bug.

 -- Andrew McMillan <debian@mcmillan.net.nz>  Wed, 14 Jun 2006 10:25:07 +1200

wrms (2.3.1-1) unstable; urgency=low

  * Fix (crudely) the Remember Me function.

 -- Andrew McMillan <debian@mcmillan.net.nz>  Tue,  6 Jun 2006 15:51:09 +1200

wrms (2.3.1-0) unstable; urgency=low

  * Added saved_searches script and support for having some reports outside of
    a person's menu.
  * Add some missing images.
  * Fix missing titles in theme.
  * Fix images in statuspie query form.
  * Crude fix for qams_project (not) creating new projects.

 -- Andrew McMillan <debian@mcmillan.net.nz>  Wed, 10 May 2006 22:02:31 +1200

wrms (2.3.0-5) unstable; urgency=low

  * Add Flexible theme and tweak PWL one.

 -- Andrew McMillan <debian@mcmillan.net.nz>  Tue,  9 May 2006 21:51:33 +1200

wrms (2.3.0-4) unstable; urgency=low

  * OK.  Really fix the stylesheet stuff.  This is about as stable as things
    get before I start busting things again, I imagine.... :-)

 -- Andrew McMillan <debian@mcmillan.net.nz>  Mon,  8 May 2006 22:43:44 +1200

wrms (2.3.0-3) unstable; urgency=low

  * Fix rendering problem in Opera / Safari.

 -- Andrew McMillan <debian@mcmillan.net.nz>  Mon,  8 May 2006 11:00:42 +1200
