@@ -31,6 +31,7 @@ binary-indep: checkroot build
 	cp -a inc $(dt)/usr/share/$(package)
 	# cp -a admin $(dt)/usr/share/$(package)
 	dh_installdocs
+	dh_installchangelogs
 	dh_fixperms
 	install -m 1777 -d $(dt)/var/lib/$(package)/attachments
 	dh_installdeb
