@@ -37,10 +37,27 @@ require_once("PgQuery.php");
 require_once("html-format.php");
 require_once("organisation-selectors-sql.php");
 
-$schema_version = 0;
+$c->schema_version = 0;
 $qry = new PgQuery( "SELECT schema_major, schema_minor, schema_patch FROM wrms_revision ORDER BY schema_id DESC LIMIT 1;" );
 if ( $qry->Exec("always") && $row = $qry->Fetch() ) {
-  $schema_version = doubleval( sprintf( "%d%03d.%03d", $row->schema_major, $row->schema_minor, $row->schema_patch) );
+  $c->schema_version = doubleval( sprintf( "%d%03d.%03d", $row->schema_major, $row->schema_minor, $row->schema_patch) );
+  $c->schema_major = $row->schema_major;
+  $c->schema_minor = $row->schema_minor;
+  $c->schema_patch = $row->schema_patch;
+}
+
+$c->code_version = 0;
+$changelog = false;
+if ( file_exists("../debian/changelog") ) {
+  $changelog = fopen( "../debian/changelog", "r" );
+}
+else if ( file_exists("/usr/share/doc/wrms/changelog.Debian") ) {
+  $changelog = fopen( "../debian/changelog", "r" );
+}
+if ( $changelog ) {
+  list( $c->code_pkgver, $c->code_major, $c->code_minor, $c->code_patch, $c->code_debian ) = fscanf($changelog, "%s (%d.%d.%d-%d)");
+  $c->code_version = (($c->code_major * 1000) + $c->code_minor).".".$c->code_patch;
+  fclose($changelog);
 }
 
 $left_panel = true;
