@@ -248,8 +248,10 @@ EOHDR;
   * Function to do the page footer
   */
   function PageFooter() {
+    global $c;
     echo <<<FOOTERTABLE
 <div id="page_footer">
+WRMS: $c->code_major.$c->code_minor.$c->code_patch-$c->code_debian , DB: $c->schema_major.$c->schema_minor.$c->schema_patch
 </div>
 FOOTERTABLE;
   }
